fix: animate content-visibility for option-input

--- a/src/app.css
+++ b/src/app.css
@@ -42,8 +42,8 @@
 			::details-content {
 				height: 0;
 				transition:
-					height 150ms ease,
-					content-visibility 150ms ease allow-discrete;
+					height 100ms ease,
+					content-visibility 100ms ease allow-discrete;
 				overflow: clip;
 			}
 
